docs/errors/examples/argument-type-mismatch-string-for-int/argument-type-mismatch-string-for-int.grob
// E0004 — passing a string literal where a function expects an int
// Eventual path: docs/errors/examples/argument-type-mismatch-string-for-int/argument-type-mismatch-string-for-int.grob
fn repeat(count: int): string {
    return strings.repeat("*", count)
}

print(repeat("ten"))
